--- a/app/templates/pages/user_profile.html
+++ b/app/templates/pages/user_profile.html
@@ -32,6 +32,7 @@
                         </div>
                     </div>
                 </div>
+            
             </nav>
             <nav>
                 <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
@@ -60,34 +61,32 @@
                                 <div class="products-i">
                                     <a href="#" class="products-link mb-2">
                                         <div class="card">
-                                            <img class="card-img-top" src="{% static 'img/product_1.jpg'%}"
-                                                alt="Card image cap">
-                                            <div class="products-price-container">
-                                                <div class="products-price">
-                                                    <span class="price-val">10 AZN</span>
+                                            <div class="products-top">
+                                                <img class="card-img-top" src="{% static 'img/product_1.jpg' %}" alt="Card image cap">
+                                                <div class="products-price-container">
+                                                    <div class="products-price">
+                                                        <span class="price-val">10 AZN</span>
+                                                    </div>
                                                 </div>
                                             </div>
-                                            <div class="card-body">
-                                                <h5 class="card-title products-name">Card title </h5>
-                                                <p class="card-text">Bakı, bugün, 18:21</p>
-                                            </div>
+                                            <div class="products-name">Card title Card title Card title Card title</div>
+                                            <div class="products-created">Bakı, bugün, 18:21</div>
                                         </div>
                                     </a>
                                 </div>
                                 <div class="products-i">
                                     <a href="#" class="products-link mb-2">
                                         <div class="card">
-                                            <img class="card-img-top" src="{% static 'img/product_1.jpg'%}"
-                                                alt="Card image cap">
-                                            <div class="products-price-container">
-                                                <div class="products-price">
-                                                    <span class="price-val">10 AZN</span>
+                                            <div class="products-top">
+                                                <img class="card-img-top" src="{% static 'img/product_1.jpg' %}" alt="Card image cap">
+                                                <div class="products-price-container">
+                                                    <div class="products-price">
+                                                        <span class="price-val">10 AZN</span>
+                                                    </div>
                                                 </div>
                                             </div>
-                                            <div class="card-body">
-                                                <h5 class="card-title products-name">Card title </h5>
-                                                <p class="card-text">Bakı, bugün, 18:21</p>
-                                            </div>
+                                            <div class="products-name">Card title Card title Card title Card title</div>
+                                            <div class="products-created">Bakı, bugün, 18:21</div>
                                         </div>
                                     </a>
                                 </div>
@@ -97,68 +96,31 @@
                 </div>
                 <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
                     <div class="text-center">
-                    <h3>Bu bölmədə elan yoxdur</h3>
-                    <a style="color: #fff; font-weight: bold;"  type="button" class="header-btn"><i class="fa fa-fw fa-plus"></i>Elan yerləşdir</a>
-                </div>
-                </div>
+                        <h3>Bu bölmədə elan yoxdur</h3>
+                        <a style="color: #fff; font-weight: bold;"  type="button" class="header-btn"><i class="fa fa-fw fa-plus"></i>Elan yerləşdir</a>
+                    </div>
                 <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
-
                     <div class="products">
                         <div class="row">
                             <div class="col-md-12">
-                                <!-- All producs here-->
-                                <div class="products-i">
-                                    <a href="#" class="products-link mb-2">
-                                        <div class="card">
-                                            <img class="card-img-top" src="{% static 'img/product_1.jpg'%}"
-                                                alt="Card image cap">
-                                            <div class="products-price-container">
-                                                <div class="products-price">
-                                                    <span class="price-val">10 AZN</span>
+                                 <!-- All producs here-->
+                                        <div class="products-i">
+                                            <a href="#" class="products-link mb-2">
+                                                <div class="card">
+                                                    <div class="products-top">
+                                                        <img class="card-img-top" src="{% static 'img/product_1.jpg' %}" alt="Card image cap">
+                                                        <div class="products-price-container">
+                                                            <div class="products-price">
+                                                                <span class="price-val">10 AZN</span>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="products-name">Card title Card title Card title Card title</div>
+                                                    <div class="products-created">Bakı, bugün, 18:21</div>
                                                 </div>
-                                            </div>
-                                            <div class="card-body">
-                                                <h5 class="card-title products-name">Card title </h5>
-                                                <p class="card-text">Bakı, bugün, 18:21</p>
-
-                                            </div>
+                                            </a>
                                         </div>
-                                    </a>
-                                </div>
-                                <div class="products-i">
-                                    <a href="#" class="products-link mb-2">
-                                        <div class="card">
-                                            <img class="card-img-top" src="{% static 'img/product_1.jpg'%}"
-                                                alt="Card image cap">
-                                            <div class="products-price-container">
-                                                <div class="products-price">
-                                                    <span class="price-val">10 AZN</span>
-                                                </div>
-                                            </div>
-                                            <div class="card-body">
-                                                <h5 class="card-title products-name">Card title </h5>
-                                                <p class="card-text">Bakı, bugün, 18:21</p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                                <div class="products-i">
-                                    <a href="#" class="products-link mb-2">
-                                        <div class="card">
-                                            <img class="card-img-top" src="{% static 'img/product_1.jpg'%}" alt="Card image cap">
-                                            <div class="products-price-container">
-                                                <div class="products-price">
-                                                    <span class="price-val">10 AZN</span>
-                                                </div>
-                                            </div>
-                                            <div class="card-body">
-                                            <h5 class="card-title products-name">Card title </h5>
-                                            <p class="card-text">Bakı, bugün, 18:21</p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
+                            </div> 
                         </div>
                     </div>
                 </div>
@@ -166,55 +128,19 @@
                     <div class="products">
                         <div class="row">
                             <div class="col-md-12">
-                                <!-- All producs here-->
-                                <div class="products-i">
+                                     <div class="products-i">
                                     <a href="#" class="products-link mb-2">
                                         <div class="card">
-                                            <img class="card-img-top" src="{% static 'img/product_1.jpg'%}"
-                                                alt="Card image cap">
-                                            <div class="products-price-container">
-                                                <div class="products-price">
-                                                    <span class="price-val">10 AZN</span>
+                                            <div class="products-top">
+                                                <img class="card-img-top" src="{% static 'img/product_1.jpg' %}" alt="Card image cap">
+                                                <div class="products-price-container">
+                                                    <div class="products-price">
+                                                        <span class="price-val">10 AZN</span>
+                                                    </div>
                                                 </div>
                                             </div>
-                                            <div class="card-body">
-                                                <h5 class="card-title products-name">Card title </h5>
-                                                <p class="card-text">Bakı, bugün, 18:21</p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                                <div class="products-i">
-                                    <a href="#" class="products-link mb-2">
-                                        <div class="card">
-                                            <img class="card-img-top" src="{% static 'img/product_1.jpg'%}"
-                                                alt="Card image cap">
-                                            <div class="products-price-container">
-                                                <div class="products-price">
-                                                    <span class="price-val">10 AZN</span>
-                                                </div>
-                                            </div>
-                                            <div class="card-body">
-                                                <h5 class="card-title products-name">Card title </h5>
-                                                <p class="card-text">Bakı, bugün, 18:21</p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                                <div class="products-i">
-                                    <a href="#" class="products-link mb-2">
-                                        <div class="card">
-                                            <img class="card-img-top" src="{% static 'img/product_1.jpg'%}"
-                                                alt="Card image cap">
-                                            <div class="products-price-container">
-                                                <div class="products-price">
-                                                    <span class="price-val">10 AZN</span>
-                                                </div>
-                                            </div>
-                                            <div class="card-body">
-                                                <h5 class="card-title products-name">Card title </h5>
-                                                <p class="card-text">Bakı, bugün, 18:21</p>
-                                            </div>
+                                            <div class="products-name">Card title Card title Card title Card title</div>
+                                            <div class="products-created">Bakı, bugün, 18:21</div>
                                         </div>
                                     </a>
                                 </div>
