celery task for resetting dail view count of product and API Endpoint for website statistics created

--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -27,30 +27,19 @@
                             <div class="l-center">
                                 <div class="statistic-counters-i">
                                     <div class="statistic-counters-quantity day-visits">
-                                        {% for us in active_users %}
-                                            <span>{{ us }}</span>
-                                        {% endfor %}
+                
                                     </div>
                                     <div class="statistic-counters-text">istifadəçi<br>gün ərzində</div>
                                 </div>
                                 <div class="statistic-counters-i">
                                     <div class="statistic-counters-quantity day-hits">
-                                        <span>4</span>
-                                        <span>2</span>
-                                        <span>3</span>
-                                        <span>5</span>
-                                        <span>0</span>
                                         
                                     </div>
                                     <div class="statistic-counters-text">baxış<br>gün ərzində</div>
                                 </div>
                                 <div class="statistic-counters-i">
-                                    <div class="statistic-counters-quantity">
-                                        <span>2</span>
-                                        <span>2</span>
-                                        <span>3</span>
-                                        <span>6</span>
-                                        <span>0</span>
+                                    <div class="statistic-counters-quantity daily-new-product">
+                                        
                                     </div>
                                     <div class="statistic-counters-text">yeni elan<br>gün ərzində</div>
                                 </div>
