--- a/app/templates/includes/header_main.html
+++ b/app/templates/includes/header_main.html
@@ -6,7 +6,7 @@
                     <div class="row header-main-row">
                         <div class="col-md-4">
                             <div class="logo">
-                                <img src="{% static 'img/logo.jpg' %}" alt="logo">
+                                <a href="{% url 'home-page' %}"><img src="{% static 'img/logo.svg' %}" alt="logo"></a>
                             </div>
                         </div>
                         <div class="col-md-8 mt-3 mb-3 pr-4">
