--- a/app/app/static/css/header_search_categories.css
+++ b/app/app/static/css/header_search_categories.css
@@ -1,4 +1,4 @@
-.header-categories-row img {
+/* .header-categories-row img {
     width: 50px;
     height: 50px;
 }
@@ -95,4 +95,53 @@ color: #ff6617;
         width: 30%;
         margin-right: 0;
        }
+} */
+
+.header-category-icon {
+    position: relative;
+    background-color: white;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+
+}
+
+.header-category-icon img {
+    position: relative;
+    width: 30px;
+    height: 30px;
+    left: 18%;
+    top: 17%;
+    fill: #ff6617;
+}
+
+a {
+    text-decoration: none;
+}
+
+.category-title span{
+    margin-left: 0.4rem;
+    top: 25%;
+    position: relative;
+    font-weight: 500;
+    font-size: 0.9rem;
+    text-decoration: underline;
+} 
+
+.category-title span:hover{
+    color: #ff6617;
+} 
+
+.category-row {
+    margin-top: 1.1rem;
+    margin-bottom: 1.1rem;
+    position: relativel
+}
+
+.category-first-row{
+    margin-top: 2rem;
+}
+
+.category-last-row {
+    margin-bottom: 2rem;
 }
