--- a/app/templates/includes/header_search.html
+++ b/app/templates/includes/header_search.html
@@ -31,10 +31,10 @@
                         </div>
                     </div>
                 </form>
-                <div class="search-footer">
+                <!-- <div class="search-footer">
                     <a class="search-all" href="#">Bütün elanlar</a>
-                </div>
-                <div class="dropdown">
+                </div> -->
+                <!-- <div class="dropdown">
                     <button class="dropbtn" style=" background-color: #FFF;
                             "><span>Qiymət, AZN</span> <i class="fas fa-chevron-down arrow-down"></i> </button>
                     <div class="dropdown-content" style="padding:10px">
@@ -42,122 +42,27 @@
                         <input class="form-control " id="price_range" class="maximum" placeholder="max." type="number" >
                     </div>
 
-                </div>
-
+                </div> -->
 
                 <!-- Header categories-->
                 <div class="header-categories-row">
-                    <a class="header-category consumer-electronics" href="#">
-                        <img src="{% static 'img/ev.jpg' %}" class="header-category-icon">
-                        <span>Ev və bağ üçün</span>
-                    </a>
-                    <div class="header-subcategories">
-                    </div>
-
-                    <a class="header-category consumer-electronics" target="_blank" href="#">
-                        <img alt="bos.az" src="{% static 'img/mob.jpg' %}">
-                        <span>Elektronika</span>
-                    </a>
-                    <div class="header-subcategories">
-                    </div>
-
-                    <a class="header-category transport" target="_blank" href="#">
-                        <img alt="burbo.az" src="{% static 'img/avt.jpg' %}">
-                        <span>Nəqliyyat</span>
-                    </a>
-                    <div class="header-subcategories">
-                    </div>
-
-                    <a class="header-category real-estate" target="_blank" href="#">
-                        <img alt="bina.az" src="{% static 'img/home.jpg' %}">
-                        <span>Daşınmaz əmlak</span>
-                    </a>
-                    <div class="header-subcategories">
-                    </div>
-
-                    <div class="header-subcategory-wrapper">
-                        <div class="placeholder"></div>
-                        <div class="clearfix"></div>
-                    </div>
-                    <div class="header-subcategory-wrapper">
-                        <div class="placeholder"></div>
-                        <div class="clearfix"></div>
-                    </div>
-                </div>
-
-                <div class="header-categories-row">
-                    <a class="header-category personal-belongings" target="_blank" href="#">
-                        <img alt="bina.az" src="{% static 'img/dress.jpg' %}">
-                        <span>Şəxsi əşyalar</span>
-                    </a>
-                    <div class="header-subcategories">
-                    </div>
-
-                    <a class="header-category services" target="_blank" href="#">
-                        <img alt="bina.az" src="{% static 'img/tools.jpg' %}">
-                        <span>Xidmətlər və biznes</span>
-                    </a>
-                    <div class="header-subcategories">
-                    </div>
-
-                    <a class="header-category hobby-leisure" target="_blank" href="#">
-                        <img alt="bina.az" src="{%static 'img/gitar.jpg' %}">
-                        <span>Hobbi və asudə</span>
-                    </a>
-                    <div class="header-subcategories">
-                    </div>
-
-                    <a class="header-category kids-world" target="_blank" href="#">
-                        <img alt="bina.az" src="{% static 'img/kids.jpg' %}">
-                        <span>Hobbi və asudə</span>
-                    </a>
-                    <div class="header-subcategories">
-                    </div>
-                    <div class="header-subcategory-wrapper">
-                        <div class="placeholder"></div>
-                        <div class="clearfix"></div>
-                    </div>
-                    <div class="header-subcategory-wrapper">
-                        <div class="placeholder"></div>
-                        <div class="clearfix"></div>
-                    </div>
-                </div>
-
-                <div class="header-categories-row">
-                    <a class="header-category animals" target="_blank" href="#">
-                        <img alt="bina.az" src="{% static 'img/animals.jpg' %}">
-                        <span>Heyvanlar</span>
-                    </a>
-                    <div class="header-subcategories">
-                    </div>
-
-                    <a class="header-category work-and-business" target="_blank" href="#">
-                        <img alt="bina.az" src="{% static 'img/job.jpg' %}">
-                        <span>İş elanları</span>
-                    </a>
-                    <div class="header-subcategories">
-                    </div>
-
-                    <a class="header-category all-categories" target="_blank" href="#">
-                        <img alt="bina.az" src="{% static 'img/others.jpg' %}">
-                        <span>Bütün kateqoriyalar</span>
-                    </a>
-                    <div class="header-subcategories">
-                    </div>
-
-                    <a class="header-category-shop shop" target="_blank" href="#">
-                        <img alt="bina.az" src="{% static 'img/shop.jpg' %}">
-                        <span>Mağazalar və şirkətlər</span>
-                    </a>
-                    <div class="header-subcategories">
-                    </div>
-                    <div class="header-subcategory-wrapper">
-                        <div class="placeholder"></div>
-                        <div class="clearfix"></div>
-                    </div>
-                    <div class="header-subcategory-wrapper">
-                        <div class="placeholder"></div>
-                        <div class="clearfix"></div>
+                    <div class='row'>
+                        {% for category in categories %}
+                        <div class='col-3'>
+                            <a href='#'>
+                                <div class='row category-row {% if forloop.counter <= 4 %} category-first-row {% elif forloop.counter >= 9 %} category-last-row {% endif %}'>
+                                    <div class='col-2'>
+                                        <div class='header-category-icon'>
+                                            <img src="{{ category.icon.url }}">
+                                        </div>
+                                    </div>
+                                    <div class='col-10 category-title'>
+                                        <span> {{ category.name }} </span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>      
+                        {% endfor %}              
                     </div>
                 </div>
             </div>
