--- a/app/app/static/css/header_main.css
+++ b/app/app/static/css/header_main.css
@@ -11,8 +11,8 @@
 .header-main a {
     color: #fff; 
     font-weight: bold;
-    margin-left: 50px;
-   
+    /* margin-left: 50px;
+    */
 }
 
 .header-btn {
