--- a/app/app/static/css/user_profile.css
+++ b/app/app/static/css/user_profile.css
@@ -1,3 +1,6 @@
+.body{
+    font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+}
 .badge{
     font-size: 22px;
     background: none;
@@ -6,6 +9,11 @@
     padding: 4px 10px;
     border-radius: 50%;
     margin-left: 4px;
+}
+
+.text-center{
+    background: #f6f6f5;
+    height: 300px;
 }
 
 .navbar-brand{
@@ -19,4 +27,21 @@
 }
 .h3, h3{
     padding: 2rem !important;
+}
+.actions{
+    margin: 0;
+    padding: 0;
+    background-color: #f8f8f8;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    list-style: none;
+}
+
+.products-price{
+    padding: 7px 10px;
+    background-color: #ff6617;
+    color: #fff;
+    text-align: left;
+    width: min-content;
+    height: 33px;
 }
