--- a/app/templates/pages/profile_settings.html
+++ b/app/templates/pages/profile_settings.html
@@ -22,38 +22,42 @@
 {% include "includes/header_main.html" %}
 
 <div class="container">
-
-  <div class="wrapper bg-white mt-sm-5">
-    <h4 class="pb-4 border-bottom">Hesab Parametrləri</h4>
-    <div class="d-flex align-items-start py-3 border-bottom"> <img src="https://images.pexels.com/photos/1037995/pexels-photo-1037995.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="img" alt="">
-        <div class="pl-sm-4 pl-2" id="img-section"> <b>Profil Şəkli</b>
-            <p>Accepted file type .png. Less than 1MB</p> <button class="btn button border"><b>Yüklə</b></button>
+    <div class="wrapper bg-white mt-sm-5">
+        <h4 class="pb-4 border-bottom">Hesab Parametrləri</h4>
+        <div class="d-flex align-items-start py-3 border-bottom"> <img
+                src="{{user.profile_img.url}}"
+                class="img" alt="">
+            <div class="pl-sm-4 pl-2" id="img-section"> <b>Profil Şəkli</b>
+                <input class="form-control form-control-sm" type="file" accept="image/*" />
+            </div>
+        </div>
+        <div class="py-2">
+            <div class="row py-2">
+                <div class="col-md-6"> <label for="firstname">Ad</label> <input type="text"
+                        class="bg-light form-control" placeholder="{{user.name}}"> </div>
+                <div class="col-md-6 pt-md-0 pt-3"> <label for="lastname">Soyad</label> <input type="text"
+                        class="bg-light form-control" placeholder="{{user.surname}}"> </div>
+            </div>
+            <div class="row py-2">
+                <div class="col-md-6"> <label for="email">Email Address</label> <input type="text"
+                        class="bg-light form-control" placeholder="{{user.email}}"> </div>
+                <div class="col-md-6 pt-md-0 pt-3"> <label for="phone">Əlaqə nömrəsi</label> <input type="tel"
+                        class="bg-light form-control" placeholder="+994{{user.phone}}"> </div>
+            </div>
+            <div class="row py-2">
+                <div class="col-md-6"> <label for="oldpassword">Cari şifrə</label> <input type="password"
+                        class="bg-light form-control" placeholder="Cari şifrə"> </div>
+            </div>
+            <div class="row py-2">
+                <div class="col-md-6"> <label for="newpassword1">Yeni şifrə</label> <input type="password"
+                        class="bg-light form-control" placeholder="Yeni şifrə daxil edin"> </div>
+                <div class="col-md-6 pt-md-0 pt-3"> <label for="newpassword1">Yeni şifrə(təkrar)</label> <input
+                        type="password" class="bg-light form-control" placeholder="Yeni şifrə daxil edin"> </div>
+            </div>
+            <div class="py-3 pb-4 border-bottom"> <button class="btn btn-primary mr-3">Yadda Saxla</button> <button
+                    class="btn border button">Ləğv Et</button> </div>
         </div>
     </div>
-    <div class="py-2">
-        <div class="row py-2">
-            <div class="col-md-6"> <label for="firstname">Ad</label> <input type="text" class="bg-light form-control" placeholder="Steve"> </div>
-            <div class="col-md-6 pt-md-0 pt-3"> <label for="lastname">Soyad</label> <input type="text" class="bg-light form-control" placeholder="Smith"> </div>
-        </div>
-        <div class="row py-2">
-            <div class="col-md-6"> <label for="email">Email Address</label> <input type="text" class="bg-light form-control" placeholder="steve_@email.com"> </div>
-            <div class="col-md-6 pt-md-0 pt-3"> <label for="phone">Əlaqə nömrəsi</label> <input type="tel" class="bg-light form-control" placeholder="+994 (012)-345-6789"> </div>
-        </div>
-        <div class="row py-2">
-          <div class="col-md-6"> <label for="oldpassword">Cari şifrə</label> <input type="password" class="bg-light form-control" placeholder="Cari şifrə"> </div>
-      </div>
-        <div class="row py-2">
-          <div class="col-md-6"> <label for="newpassword1">Yeni şifrə</label> <input type="password" class="bg-light form-control" placeholder="Yeni şifrə daxil edin"> </div>
-          <div class="col-md-6 pt-md-0 pt-3"> <label for="newpassword1">Yeni şifrə(təkrar)</label> <input type="password" class="bg-light form-control" placeholder="Yeni şifrə daxil edin"> </div>
-      </div>
-        <div class="py-3 pb-4 border-bottom"> <button class="btn btn-primary mr-3">Yadda Saxla</button> <button class="btn border button">Ləğv Et</button> </div>
-<<<<<<< HEAD
-
-=======
-    
->>>>>>> origin/development
-    </div>
-</div>   
 </div>
 
 
