logo design updated

--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -54,42 +54,8 @@
                             </div>
                             <div class="products">
                                 <div class="row">
-                                    <div class="col-md-12">
+                                    <div class="col-md-12 products-row">
                                         <!-- All producs here-->
-                                        <div class="products-i">
-                                            <a href="#" class="products-link mb-2">
-                                                <div class="card">
-                                                    <div class="products-top">
-                                                        <img class="card-img-top" src="{% static 'img/product_1.jpg' %}" alt="Card image cap">
-                                                        <div class="products-price-container">
-                                                            <div class="products-price">
-                                                                <span class="price-val">10 AZN</span>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="products-name">Card title Card title Card title Card title</div>
-                                                    <div class="products-created">Bakı, bugün, 18:21</div>
-                                                </div>
-                                            </a>
-                                        </div>
-                           
-                                        <!-- All producs here-->
-                                        <div class="products-i">
-                                            <a href="#" class="products-link mb-2">
-                                                <div class="card">
-                                                    <div class="products-top">
-                                                        <img class="card-img-top" src="{% static 'img/product_1.jpg' %}" alt="Card image cap">
-                                                        <div class="products-price-container">
-                                                            <div class="products-price">
-                                                                <span class="price-val">10 AZN</span>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="products-name">Card title Card title Card title Card title</div>
-                                                    <div class="products-created">Bakı, bugün, 18:21</div>
-                                                </div>
-                                            </a>
-                                        </div>
                                         
                                         <!--pruducts-->
                                     </div>                                    
