--- a/app/app/static/css/header_main.css
+++ b/app/app/static/css/header_main.css
@@ -67,7 +67,7 @@
         margin-left: auto;
         margin-right:auto;
         width: 236px;
-        margin-top: 0.9rem;
+        margin-top: 1rem;
       }
       .header-main-row{
           padding: 0;
@@ -170,4 +170,8 @@
         line-height: 10px;
    }
      
+}
+
+.logo {
+    margin-top: 1rem;
 }
