--- a/app/app/static/css/register.css
+++ b/app/app/static/css/register.css
@@ -8,7 +8,6 @@
     min-height: 100vh;
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
 }
-
 .auth {
     margin: 10% 0 10% 0;
     width: 33%;
@@ -21,7 +20,6 @@
     position: relative;
     overflow-y: auto;
 }
-
 .auth__close-btn {
     display: inline-block;
     position: fixed;
@@ -39,7 +37,6 @@
     background-color: transparent;
     cursor: pointer;
 }
-
 .back-btn {
     width: 48px;
     height: 54px;
@@ -62,28 +59,27 @@
 .login{
     padding: 10% 2% 5% 2%;
 }
+
 .title{
     font-size: 20px;
-    font-weight: 500;
-    color: #4b8af9;
     font-weight: bold;
+    color: #4387fd;
 }
+
 .title--main{
     line-height: 1.64;
     margin-bottom: 30px;
 }
-
 .input-group {
     position: relative;
-    margin-bottom: 10px;
 }
 
-.input-group input{
-
-    height: 46px;
-    padding: 12px 15px 12px;
+form input{
+    height: 40px;
+    padding: 10px 15px 10px;
+    margin-bottom: 5px;
     width: 100%;
-    font-size: 14px;
+    font-size: 13px;
     line-height: 1.2;
     letter-spacing: 1px;
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
@@ -93,40 +89,31 @@
     box-sizing: border-box;
     box-shadow: none;
     appearance: none;
-
-}
-
-.btn.disabled {
-    opacity: .5;
-    pointer-events: none;
-}
+    }
 
 .btn--default {
     background-color: #4b8af9;
     border: 1px solid #4b8af9;
     color: #fff;
     margin-bottom: 4px;
-}
+    margin-top: 16px;
 
+}
 .btn {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 60px;
+    height: 45px;
     border-radius: 4px;
-    font-size: 16px;
-    font-weight: 500;
+    font-size: 14px;
+    font-weight: 600;
     text-decoration: none;
     cursor: pointer;
     box-sizing: border-box;
     outline: none;
 }
-
-
-
-
-
-
-    
-    
+.confirmation a{
+    color:  #8895ad;
+    padding: 4% 4%;
+}
