--- a/app/templates/accounts/register.html
+++ b/app/templates/accounts/register.html
@@ -31,6 +31,10 @@
                                 {{form.username.errors}}
                             </div>
                             <div class="input-group">
+                                {{form.phone}}
+                                {{form.phone.errors}}
+                            </div>
+                            <div class="input-group">
                                 {{form.email}}
                                 {{form.email.errors}}
                             </div>
