--- a/app/templates/pages/result_page.html
+++ b/app/templates/pages/result_page.html
@@ -25,44 +25,7 @@
             <div class="container-fluid">
                 <div class="row content-row">
                     <!-- statistic -->
-                    <div class="statistic-counters-container">
-                        <div class="l-center">
-                            <div class="statistic-counters-i">
-                                <div class="statistic-counters-quantity day-visits">
-                                    <span>1</span>
-                                    <span>8</span>
-                                    <span>7</span>
-                                    <span>6</span>
-                                    <span>0</span>
-                                    <span>0</span>
-                                </div>
-                                <div class="statistic-counters-text">istifadəçi<br>gün ərzində</div>
-                            </div>
-                            <div class="statistic-counters-i">
-                                <div class="statistic-counters-quantity day-hits">
-                                    <span>4</span>
-                                    <span>2</span>
-                                    <span>3</span>
-                                    <span>5</span>
-                                    <span>0</span>
-                                    <span>0</span>
-                                    <span>0</span>
-                                </div>
-                                <div class="statistic-counters-text">baxış<br>gün ərzində</div>
-                            </div>
-                            <div class="statistic-counters-i">
-                                <div class="statistic-counters-quantity">
-                                    <span>2</span>
-                                    <span>2</span>
-                                    <span>3</span>
-                                    <span>6</span>
-                                    <span>0</span>
-                                </div>
-                                <div class="statistic-counters-text">yeni elan<br>gün ərzində</div>
-                            </div>
-                        </div>
-                    </div>
-
+                    {% include "includes/statistic.html" %}
 
                     <!-- latest products-->
                     <div class="products-container products-container_latest">
