--- a/app/templates/includes/header_search.html
+++ b/app/templates/includes/header_search.html
@@ -70,6 +70,11 @@
                     </div>
                     <div class="row all-categories-row">
                         <div class="col-md-4"><a href="#"><i class="fas fa-chevron-right"></i><span> Tikinti </span> <span class="total-amount"> 2986 </span> </a></div>
+                        <div class="col-md-4"><a href="#"><i class="fas fa-chevron-right"></i><span> Tikinti </span> <span class="total-amount"> 2986 </span> </a></div>
+                        <div class="col-md-4"><a href="#"><i class="fas fa-chevron-right"></i><span> Tikinti </span> <span class="total-amount"> 2986 </span> </a></div>
+                        <div class="col-md-4"><a href="#"><i class="fas fa-chevron-right"></i><span> Tikinti </span> <span class="total-amount"> 2986 </span> </a></div>
+                        <div class="col-md-4"><a href="#"><i class="fas fa-chevron-right"></i><span> Tikinti </span> <span class="total-amount"> 2986 </span> </a></div>
+                        <div class="col-md-4"><a href="#"><i class="fas fa-chevron-right"></i><span> Tikinti </span> <span class="total-amount"> 2986 </span> </a></div>
                     </div>
                 </div> 
             </div>
