product update page added

--- a/app/templates/includes/header_search.html
+++ b/app/templates/includes/header_search.html
@@ -50,7 +50,7 @@
                         {% for category in categories %}
                         <div class='col-3'>
                             <a href='#'>
-                                <div class='row category-row {% if forloop.counter <= 4 %} category-first-row {% elif forloop.counter >= 9 %} category-last-row {% endif %}'>
+                                <div class='row category-row row-{{forloop.counter}} {% if forloop.counter <= 4 %} category-first-row {% elif forloop.counter >= 9 %} category-last-row {% endif %}'>
                                     <div class='col-2'>
                                         <div class='header-category-icon'>
                                             <img src="{{ category.icon.url }}">
