--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="{% static 'css/header_search_categories.css'%}">
     <link rel="stylesheet" href="{% static 'css/home_content.css' %}">
     <link rel="stylesheet" href="{% static 'css/footer.css' %}">
+    <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/all.css' %}">
+
 {% endblock css %}
     
 {% block body %}
