--- a/app/templates/pages/product_detail.html
+++ b/app/templates/pages/product_detail.html
@@ -73,9 +73,7 @@
           <div class="modal-body">
             <img id="image-gallery-image" class="img-responsive col-md-12" src="{{product.image.url}}">
           </div>
-          <div class="modal-body">
-            <img id="image-gallery-image" class="img-responsive col-md-12" src="{{product.image.url}}">
-          </div>
+          
           {%endfor%}
 
           <div class="modal-footer">
@@ -163,7 +161,7 @@
           </tbody>
         </table>
 
-        <p style="padding-top: 1rem; text-align: left; -webkit-user-modify: read-write-plaintext-only;">
+        <p style="padding-top: 1rem; text-align: left;">
           {{product.description}}
         </p>
       </div>
