--- a/app/templates/includes/header_search.html
+++ b/app/templates/includes/header_search.html
@@ -1,4 +1,5 @@
 {% load static%}
+
 <!-- Header search form-->
 <div class="header-navigation">
     <div class="container">
@@ -9,23 +10,32 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group has-search">
-                                        <span class="fa fa-search form-control-feedback"></span>
-                                        <input type="text" name='keyword' class="form-control" placeholder="Məsələn, iPhone X">
+                                    <span class="fa fa-search form-control-feedback"></span>
+                                    <input type="text" name='keyword' class="form-control"
+                                        placeholder="Məsələn, iPhone X">
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group has-select">
                                     <span class="fa fa-map-marker fa-lg form-control-feedback"></span>
-                                    <select class="form-control">
-                                        <option value="0">BÜTÜN AZƏRBAYCAN</option>
+                                    <select style="height: 38px;" class="form-control">
+                                        <option style="line-height: 1rem;" value="0">Bütün Azərbaycan
+                                            <i class="fas fa-chevron-down"></i> </option>
                                         {% for city in cities %}
                                         <option value="{{ city.name }}">{{ city.name }}</option>
                                         {% endfor %}
                                     </select>
                                 </div>
                                 <div class="form-group btn-navigation">
-                                    <button type="submit" class="btn-header-navigation">Tap
-                                    <span class="fa fa-search form-control"></span></button>
+                                    <button type="submit" class="btn-header-navigation" style="
+                                    height: 37px;
+                                    padding-top: 7.6px;
+                                ">Tap
+                                        <i class="fa fa-search" aria-hidden="true" style="
+                                        margin-left: 18px;
+                                        margin-top: 3.5px;
+                                    "></i>
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -50,7 +60,8 @@
                         {% for category in categories %}
                         <div class='col-3'>
                             <a href='#'>
-                                <div class='row category-row {% if forloop.counter <= 4 %} category-first-row {% elif forloop.counter >= 9 %} category-last-row {% endif %}'>
+                                <div
+                                    class='row category-row {% if forloop.counter <= 4 %} category-first-row {% elif forloop.counter >= 9 %} category-last-row {% endif %}'>
                                     <div class='col-2'>
                                         <div class='header-category-icon'>
                                             <img src="{{ category.icon.url }}">
@@ -61,8 +72,8 @@
                                     </div>
                                 </div>
                             </a>
-                        </div>      
-                        {% endfor %}              
+                        </div>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
