--- a/app/templates/pages/profile_settings.html
+++ b/app/templates/pages/profile_settings.html
@@ -24,45 +24,76 @@
 <div class="container">
     <div class="wrapper bg-white mt-sm-5">
         <h4 class="pb-4 border-bottom">Hesab Parametrləri</h4>
-        <div class="d-flex align-items-start py-3 border-bottom"> <img
-                src="{{user.profile_img.url}}"
-                class="img" alt="">
+        <div class="d-flex align-items-start py-3 border-bottom">
+            <form>
+                <img id="blah" style="max-width: 120px; max-height: 100px;" src="{{user.profile_img.url}}"
+                    alt="your image" />
+            </form>
             <div class="pl-sm-4 pl-2" id="img-section"> <b>Profil Şəkli</b>
-                <input class="form-control form-control-sm" type="file" accept="image/*" />
+                <input type='file' id="imgInp" />
             </div>
         </div>
         <div class="py-2">
             <div class="row py-2">
-                <div class="col-md-6"> <label for="firstname">Ad</label> <input type="text"
-                        class="bg-light form-control" placeholder="{{user.name}}"> </div>
-                <div class="col-md-6 pt-md-0 pt-3"> <label for="lastname">Soyad</label> <input type="text"
-                        class="bg-light form-control" placeholder="{{user.surname}}"> </div>
+                <form method='POST'>
+                    {% csrf_token %}
+                    <div class="col-md-6"> <label for="firstname">Ad</label>
+                        <input type="text" name="name" class="bg-light form-control" placeholder="{{user.name}}">
+                    </div>
+                    <div class="col-md-6 pt-md-0 pt-3"> <label for="lastname">Soyad</label>
+                        <input type="text" name="surname" class="bg-light form-control" placeholder="{{user.surname}}">
+                    </div>
             </div>
             <div class="row py-2">
-                <div class="col-md-6"> <label for="email">Email Address</label> <input type="text"
-                        class="bg-light form-control" placeholder="{{user.email}}"> </div>
-                <div class="col-md-6 pt-md-0 pt-3"> <label for="phone">Əlaqə nömrəsi</label> <input type="tel"
-                        class="bg-light form-control" placeholder="+994{{user.phone}}"> </div>
+                <div class="col-md-6"> <label for="email">Email Address</label>
+                    <input type="text" name="email" class="bg-light form-control" placeholder="{{user.email}}">
+                </div>
+                <div class="col-md-6 pt-md-0 pt-3"> <label for="phone">Əlaqə nömrəsi</label>
+                    <input type="tel" name="phone_number" class="bg-light form-control"
+                        placeholder="+994{{user.phone}}">
+                </div>
             </div>
             <div class="row py-2">
-                <div class="col-md-6"> <label for="oldpassword">Cari şifrə</label> <input type="password"
-                        class="bg-light form-control" placeholder="Cari şifrə"> </div>
+                <div class="col-md-6"> <label for="oldpassword">Cari şifrə</label>
+                    <input type="password" name="oldpassword" class="bg-light form-control" placeholder="Cari şifrə">
+                </div>
             </div>
             <div class="row py-2">
-                <div class="col-md-6"> <label for="newpassword1">Yeni şifrə</label> <input type="password"
-                        class="bg-light form-control" placeholder="Yeni şifrə daxil edin"> </div>
-                <div class="col-md-6 pt-md-0 pt-3"> <label for="newpassword1">Yeni şifrə(təkrar)</label> <input
-                        type="password" class="bg-light form-control" placeholder="Yeni şifrə daxil edin"> </div>
+                <div class="col-md-6"> <label for="newpassword1">Yeni şifrə</label>
+                    <input type="password" name="newpassword1" class="bg-light form-control"
+                        placeholder="Yeni şifrə daxil edin">
+                </div>
+                <div class="col-md-6 pt-md-0 pt-3"> <label for="newpassword1">Yeni şifrə(təkrar)</label>
+                    <input type="password" name="newpassword2" class="bg-light form-control"
+                        placeholder="Yeni şifrə daxil edin">
+                </div>
             </div>
-            <div class="py-3 pb-4 border-bottom"> <button class="btn btn-primary mr-3">Yadda Saxla</button> <button
-                    class="btn border button">Ləğv Et</button> </div>
+            <div class="py-3 pb-4 border-bottom"> <button type="submit" class="btn btn-primary mr-3">Yadda
+                    Saxla</button> <button class="btn border button">Ləğv Et</button> </div>
+            </form>
         </div>
     </div>
 </div>
 
 
 
+
 <!-- JavaScript Bundle with Popper -->
+<script>function readURL(input) {
+        if (input.files && input.files[0]) {
+            var reader = new FileReader();
+
+            reader.onload = function (e) {
+                $('#blah').attr('src', e.target.result);
+            }
+
+            reader.readAsDataURL(input.files[0]); // convert to base64 string
+        }
+    }
+
+    $("#imgInp").change(function () {
+        readURL(this);
+    });</script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
