update profile view and logic updated

--- a/app/templates/pages/profile_settings.html
+++ b/app/templates/pages/profile_settings.html
@@ -59,14 +59,14 @@
                 </div>
             </div>
             <div class="row py-2">
-                <div class="col-md-6"> <label for="newpassword1">Yeni şifrə</label>
-                    <input type="password" name="newpassword1" class="bg-light form-control"
+                <div class="col-md-6"> <label for="password">Yeni şifrə</label>
+                    <input type="password" name="password" class="bg-light form-control"
                         placeholder="Yeni şifrə daxil edin">
                 </div>
-                <div class="col-md-6 pt-md-0 pt-3"> <label for="newpassword1">Yeni şifrə(təkrar)</label>
+                <!-- <div class="col-md-6 pt-md-0 pt-3"> <label for="newpassword1">Yeni şifrə(təkrar)</label>
                     <input type="password" name="newpassword2" class="bg-light form-control"
                         placeholder="Yeni şifrə daxil edin">
-                </div>
+                </div> -->
             </div>
             <div class="py-3 pb-4 border-bottom"> <button type="submit" class="btn btn-primary mr-3">Yadda
                     Saxla</button> <button class="btn border button">Ləğv Et</button> </div>
