--- a/app/templates/pages/profile_settings.html
+++ b/app/templates/pages/profile_settings.html
@@ -26,7 +26,7 @@
         <h4 class="pb-4 border-bottom">Hesab Parametrləri</h4>
         <div class="d-flex align-items-start py-3 border-bottom">
             <form>
-                <img id="blah" style="max-width: 120px; max-height: 100px;" src="{{user.profile_img.url}}"
+                <img id="blah" style="max-width: 120px; max-height: 100px;" src=
                     alt="your image" />
             </form>
             <div class="pl-sm-4 pl-2" id="img-section"> <b>Profil Şəkli</b>
